--- a/playbooks/ansible.cfg
+++ b/playbooks/ansible.cfg
@@ -4,4 +4,5 @@ inventory = hosts
 remote_user = ec2-user
 #private_key_file = /home/pasha/vagrant/centos7/.vagrant/machines/default/virtualbox/private_key
 private_key_file = /home/pasha/Dropbox/pavel_lucik_aws.pem
+#private_key_file = /home/pasha/.ansible/keys/private_key_ansible_centos
 host_key_checking = False
