--- a/roles/pavellucik.docker/tasks/install.yml
+++ b/roles/pavellucik.docker/tasks/install.yml
@@ -8,7 +8,7 @@
       update_cache: yes
     loop:
       "{{ install_prerequisites_list }}"
-    when: ansible_os_family == 'RedHat'
+    when: ansible_os_family == 'RedHat' and ansible_distribution == 'CentOS'
 
   - name: add Docker repository.
     get_url:
@@ -17,23 +17,32 @@
       owner: root
       group: root
       mode: 0644
+    when: ansible_os_family == 'RedHat' and ansible_distribution == 'CentOS'
 
-  - name: install the latest version of Docker Engine and containerd
+  - name: install the latest version of Docker Engine and containerd for CentOS
     yum:
       name: "{{ item }}"
       state: present
       update_cache: yes
     loop:
       "{{ install_uninstall_list }}"
-    when: ansible_os_family == 'RedHat'
+    when: ansible_os_family == 'RedHat' and ansible_distribution == 'CentOS'
 
-  - name: copy daemon.json config file to enable Devicemapper Storage Driver
+  - name: install Docker Engine and containerd for Amazon Linux2
+    yum:
+      name: docker
+      state: present
+      update_cache: yes
+    when: ansible_os_family == 'RedHat' and ansible_distribution == 'Amazon' and ansible_distribution_major_version == '2'
+
+  - name: copy daemon.json config file to enable Devicemapper Storage Driver on CentOS
     copy:
       src: daemon.json
       dest: /etc/docker/
       owner: root
       group: root
       mode: '0644'
+    when: ansible_os_family == 'RedHat' and ansible_distribution == 'CentOS'
 
   - include: start.yml
 
