--- a/roles/pavellucik.docker/tasks/start.yml
+++ b/roles/pavellucik.docker/tasks/start.yml
@@ -3,8 +3,14 @@
   package_facts:
     manager: "auto"
 
-- name: start Docker service
+- name: start Docker service on CentOS
   service:
     name: docker
     state: started
   when: "'docker-ce' in ansible_facts.packages"
+
+- name: start Docker service on Amazon Linux2
+  service:
+    name: docker
+    state: started
+  when: "'docker' in ansible_facts.packages"
