--- a/playbooks/ansible.cfg
+++ b/playbooks/ansible.cfg
@@ -3,6 +3,6 @@ inventory = hosts
 #remote_user = vagrant
 remote_user = ec2-user
 #private_key_file = /home/pasha/vagrant/centos7/.vagrant/machines/default/virtualbox/private_key
-private_key_file = /home/pasha/Dropbox/pavel_lucik_aws.pem
+private_key_file = /home/pavlo/.ssh/pavel_lucik_aws.pem
 #private_key_file = /home/pasha/.ansible/keys/private_key_ansible_centos
 host_key_checking = False
