--- a/playbooks/roles/pavellucik.build_docker/tasks/main.yml
+++ b/playbooks/roles/pavellucik.build_docker/tasks/main.yml
@@ -19,7 +19,7 @@
     daemon_reload: yes
     name: docker
 
-- name: Log into Nexus docker registry
+- name: log into Nexus docker registry
   become_user: docker
   become: true
   docker_login:
@@ -28,16 +28,30 @@
     password: "{{ maven_password }}"
     reauthorize: yes
 
-- name: Build image and with build args
+- name: build image and with build args and push to Nexus docker registry
   become_user: docker
   become: true
   docker_image:
-    name: spring-boot-smoke-test-web-ui
-    repository: "{{ nexus_server_ip }}:{{ nexus_server_docker_port }}/javapp"
+    name: "{{ nexus_server_ip }}:{{ nexus_server_docker_port }}/javapp"
+    #repository: "{{ nexus_server_ip }}:{{ nexus_server_docker_port }}/javapp"
     tag: "{{ build_number }}"
+    push: yes
     build:
       path: /home/{{ docker_user }}/
+      nocache: yes
+      rm: yes
     source: build
+
+- name: add tag latest to the last successfully built image
+  become_user: docker
+  become: true
+  docker_image:
+    name: "{{ nexus_server_ip }}:{{ nexus_server_docker_port }}/javapp:{{ build_number }}"
+    repository: "{{ nexus_server_ip }}:{{ nexus_server_docker_port }}/javapp:latest"
+    force_tag: yes
+    push: yes
+    state: present
+
 
 # - name: build docker image
 #   become_user: docker
