--- a/roles/pavellucik.docker/tasks/install.yml
+++ b/roles/pavellucik.docker/tasks/install.yml
@@ -44,6 +44,16 @@
       mode: '0644'
     when: ansible_os_family == 'RedHat' and ansible_distribution == 'CentOS'
 
+  - name: install pip2 to enable docker module for Ansible
+    yum:
+      name: python2-pip
+      update_cache: yes
+      state: present
+
+  - name: install docker module for Ansible
+    pip:
+      name: docker
+
   - include: start.yml
 
   - include: enable_autostart.yml
